--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
     "mysql2": "^3.1.0",
+    "nodemailer": "^6.9.13",
     "pdf-table": "^1.0.2",
     "pdfkit": "^0.15.0",
     "pdfmake": "^0.2.10"
